Update input and output files; refactor Main class to utilize NIO for file operations